--- a/index.html
+++ b/index.html
@@ -44,16 +44,87 @@
     <header class="masthead text-center text-white">
       <div class="masthead-content">
         <div class="container">
-          <h1 class="masthead-heading mb-0">Vechain To Thor</h1>
-          <h2 class="masthead-subheading mb-0">Thor Power Calculator</h2>
+          <h1>Vechain Thor Calculator</h1>
+          <h2>How many VET do you own?</h2>
           <input type="number" step="any" min="0" id="vetamount" name="vetamount">
+          <form> 
+            <span>Do you have any matured nodes?</span>
+            <div>
+              <input type="radio" id="none"
+                     name="node" value="none" checked>
+              <label for="none">None</label>
+              <input type="radio" id="strength"
+                     name="node" value="strength">
+              <label for="strength">Strength</label>
+              <input type="radio" id="thunder"
+                     name="node" value="thunder">
+              <label for="thunder">Thunder</label>
+              <input type="radio" id="mjolnir"
+                     name="node" value="mjolnir">
+              <label for="mjolnir">Mjolnir</label>
+              <input type="radio" id="thrudheim"
+                     name="node" value="thrudheim">
+              <label for="thrudheim">Thrudheim</label>
+            </div>
+          </form>
           <input type="button" id="thorcalculate" class="btn btn-primary btn-calculate" value="calculate">
+
+          <div id="thorReward" class="thor-reward" style="display:none">
+            <span id="vetDisplay"></span>
+            <span id="thorRewardPerDay"></span>
+            <span id="thorRewardPerYear"></span>
+
+            <div class="dollar-reward">
+              <div class="row">
+                <div class="col">THOR price in USD</div>
+                <div class="col">Your income per day</div>
+                <div class="col">Your income per year</div>
+              </div>
+              <div class="row">
+                <div class="col">$2</div>
+                <div class="col">
+                  <span id="incomePerDay2"></span>
+                </div>
+                <div class="col">
+                  <span id="incomePerYear2"></span>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">$5</div>
+                <div class="col">
+                  <span id="incomePerDay5"></span>
+                </div>
+                <div class="col">
+                  <span id="incomePerYear5"></span>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">$10</div>
+                <div class="col">
+                  <span id="incomePerDay10"></span>
+                </div>
+                <div class="col">
+                  <span id="incomePerYear10"></span>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">$25</div>
+                <div class="col">
+                  <span id="incomePerDay25"></span>
+                </div>
+                <div class="col">
+                  <span id="incomePerYear25"></span>
+                </div>
+              </div>
+            </div>
+
+          </div>
         </div>
       </div>
     </header>
 
     <section>
-      <div class="container">
+      <div class="container" style="display:none">
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
             <div class="p-5">
@@ -71,7 +142,7 @@
     </section>
 
     <section>
-      <div class="container">
+      <div class="container" style="display:none">
         <div class="row align-items-center">
           <div class="col-lg-6">
             <div class="p-5">
