clearer result text, automated node select

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Matured Nodes:</label>
                 </div>
                 <select class="custom-select mr-sm-2" id="nodeSelector">
-                  <option selected>None</option>
+                  <option value="none" selected>None</option>
                   <option value="strength">Strength</option>
                   <option value="thunder">Thunder</option>
                   <option value="mjolnir">Mjolnir</option>
@@ -86,16 +86,16 @@
 
             <div class="dollar-reward">
               <div class="row">
-                <div class="col align-self-center">THOR GENERATED PER DAY</div>
+                <div class="col align-self-center result-label">THOR GENERATED PER DAY</div>
               </div>
-              <div class="row justify-content-center">
+              <div class="row justify-content-center result-text">
                 <div id="thorPerDay" class="col-4"></div>
                 <div id="incomePerDay" class="col-4"></div>
               </div>
               <div class="row">
-                <div class="col align-self-center">THOR GENERATED PER YEAR</div>
+                <div class="col align-self-center result-label">THOR GENERATED PER YEAR</div>
               </div>
-              <div class="row justify-content-center">
+              <div class="row justify-content-center result-text">
                 <div id="thorPerYear" class="col-4"></div>
                 <div id="incomePerYear" class="col-4"></div>
               </div>
