Link data fields to document fields

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
             <div id="exchangePrices">
                 <div class="row justify-content-center result-text">
                     <div class="col-sm-4"> VET/USDT Price ($) </div>
-                    <div id="vetUsdtPrice" class="col-4"></div>
+                    <div id="vetUsdtPrice" class="col-4">2.25</div>
                     <div class="col-sm-4"> VET/BTC Price ($) </div>
-                    <div id="vetBtcPrice" class="col-4"></div>
+                    <div id="vetBtcPrice" class="col-4">0.00018</div>
                     <div class="col-sm-4"> BTC/USDT Price ($) </div>
-                    <div id="btcUsdtPrice" class="col-4"></div>
+                    <div id="btcUsdtPrice" class="col-4">15000</div>
                 </div>              
             </div>
           </div>
