--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
             </div>
             <div id="exchangePrices">
                 <div class="row justify-content-center result-text">
-                    <div class="col-sm-4"> VET/USDT Price ($) </div>
+                    <div class="col-sm-4"> VET/USDT Price</div>
                     <div id="vetUsdtPrice" class="col-4">2.25</div>
-                    <div class="col-sm-4"> VET/BTC Price ($) </div>
+                    <div class="col-sm-4"> VET/BTC Price</div>
                     <div id="vetBtcPrice" class="col-4">0.00018</div>
-                    <div class="col-sm-4"> BTC/USDT Price ($) </div>
+                    <div class="col-sm-4"> BTC/USDT Price</div>
                     <div id="btcUsdtPrice" class="col-4">15000</div>
                 </div>              
             </div>
