basic functional fixes
removed the calculate button as it is unnecessary imho
fixed some basic logic

--- a/index.html
+++ b/index.html
@@ -52,12 +52,15 @@
             </div>
             <div id="exchangePrices">
                 <div class="row justify-content-center result-text">
-                    <div class="col-sm-4"> VET/USDT Price</div>
-                    <div id="vetUsdtPrice" class="col-4">2.25</div>
-                    <div class="col-sm-4"> VET/BTC Price</div>
-                    <div id="vetBtcPrice" class="col-4">0.00018</div>
-                    <div class="col-sm-4"> BTC/USDT Price</div>
-                    <div id="btcUsdtPrice" class="col-4">15000</div>
+                    <div class="col-sm-4"> VET/USDT Price
+                      <div id="vetUsdtPrice" class="col-4">2.25</div>
+                    </div>
+                    <div class="col-sm-4"> VET/BTC Price
+                      <div id="vetBtcPrice" class="col-4">0.00018</div>
+                    </div>                    
+                    <div class="col-sm-4"> BTC/USDT Price
+                      <div id="btcUsdtPrice" class="col-4">15000</div>
+                    </div>
                 </div>              
             </div>
           </div>
@@ -87,13 +90,13 @@
               </div>
             </div>
           </form>
-          <input type="button" id="thorcalculate" class="btn btn-primary btn-calculate" value="calculate">
+          <!--<input type="button" id="thorcalculate" class="btn btn-primary btn-calculate" value="calculate"> -->
 
           <div id="thorReward" class="thor-reward container" style="display:none">
             <span id="vetDisplay"></span>
             <span id="thorRewardPerDay"></span>
             <span id="thorRewardPerYear"></span>
-
+            
             <div class="dollar-reward">
               <div class="row">
                 <div class="col align-self-center result-label">THOR GENERATED PER DAY</div>
@@ -109,7 +112,8 @@
                 <div id="thorPerYear" class="col-4"></div>
                 <div id="incomePerYear" class="col-4"></div>
               </div>
-            </div>
+            </div>            
+            <div id="thrudheimBonus">Qualifying Thrudheim nodes also receive 30% of all THOR Power consumed on the blockchain.</div>
           </div>
         </div>
       </div>
