--- a/index.html
+++ b/index.html
@@ -80,10 +80,6 @@
 
           <div id="thorReward" class="thor-reward container" style="display:none">
             <hr />
-            <span id="vetDisplay"></span>
-            <span id="thorRewardPerDay"></span>
-            <span id="thorRewardPerYear"></span>
-            
             <div class="dollar-reward">
               <div class="row">
                 <div class="col align-self-center result-label">EARNINGS PER DAY</div>
@@ -100,19 +96,18 @@
               <p class="thrudheim-reward" style="display: none;">Qualifying Thrudheim nodes also receive 30% of all THOR Power consumed on the blockchain </p>
             </div>
           </div>
-          <div id="exchangePrices" class="container">
-              <hr />
-              <div class="row result-text">
-                  <div class="col-md-4 offset-md-3 col-lg-3 offset-lg-4 col-6 text-left"> <b>VET/USDT Price ($)</b> </div>
-                  <div id="vetUsdtPrice" class="col-6 col-md-2 col-lg-1 text-right">2.25</div>
-                  <div class="col-md-4 offset-md-3 col-lg-3 offset-lg-4 col-6 text-left"> <b>VET/BTC Price ($)</b> </div>
-                  <div id="vetBtcPrice" class="col-6 col-md-2 col-lg-1 text-right">0.0018</div>
-                  <div class="col-md-4 offset-md-3 col-lg-3 offset-lg-4 col-6 text-left"> <b>BTC/USDT Price ($)</b> </div>
-                  <div id="btcUsdtPrice" class="col-6 col-md-2 col-lg-1 text-right">15000</div>
-                  <div class="text-center col-12"><small>Prices based on most recent values from Binance</small></div>
-              </div>              
-          </div>
-        </div>
+      <!--<div id="exchangePrices" class="container">
+            <hr />
+            <div class="row result-text">
+                <div class="col-md-4 offset-md-3 col-lg-3 offset-lg-4 col-6 text-left"> <b>VET/USDT Price ($)</b> </div>
+                <div id="vetUsdtPrice" class="col-6 col-md-2 col-lg-1 text-right">2.25</div>
+                <div class="col-md-4 offset-md-3 col-lg-3 offset-lg-4 col-6 text-left"> <b>VET/BTC Price ($)</b> </div>
+                <div id="vetBtcPrice" class="col-6 col-md-2 col-lg-1 text-right">0.0018</div>
+                <div class="col-md-4 offset-md-3 col-lg-3 offset-lg-4 col-6 text-left"> <b>BTC/USDT Price ($)</b> </div>
+                <div id="btcUsdtPrice" class="col-6 col-md-2 col-lg-1 text-right">15000</div>
+                <div class="text-center col-12"><small>Prices based on most recent values from Binance</small></div>
+            </div>              
+          </div> -->
       </div>
     </header>
 
